Updated settings for Railway

--- a/templates/store/view_store.html
+++ b/templates/store/view_store.html
@@ -403,12 +403,12 @@ body.dark .add-card a {
 </div>
 {% endif %}
 
-<div class="action-buttons mt-3 row g-2 px-4">
+<div class="action-buttons mt-3 row g-2 ">
   <div class="col-6">
     <a href="https://wa.me/?text=Check%20out%20my%20store%20on%20Waapfolio:%20{{ full_url }}"
       rel="noopener noreferrer"
       class="btn btn-success w-100">
-      📤 Share on WhatsApp
+      📤 Share on Whatsapp
     </a>
   </div>
   <div class="col-6">
