--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -10,6 +10,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             {% if notifications %}
+            <div class="notifications-wrapper">
                 <ul class="list-group">
                     {% for notification in notifications %}
                         <li class="list-group-item d-flex justify-content-between align-items-start {% if not notification.is_read %}list-group-item-dark{% endif %}">
@@ -20,6 +21,7 @@
                         </li>
                     {% endfor %}
                 </ul>
+            </div>
             {% else %}
                 <div class="card shadow-sm border-0 text-center py-5">
                     <i class="bi bi-bell-slash display-1 text-muted"></i>
@@ -30,4 +32,12 @@
         </div>
     </div>
 </div>
+<style>
+    @media (max-width: 768px) {
+  .notifications-wrapper {
+    margin-top: 200px; /* adjust to height of your mobile nav */
+  }
+}
+
+</style>
 {% endblock %}
