--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -35,7 +35,7 @@
 <style>
     @media (max-width: 768px) {
   .notifications-wrapper {
-    margin-top: 200px; /* adjust to height of your mobile nav */
+    margin-bottom: 200px; /* adjust to height of your mobile nav */
   }
 }
 
