--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -66,6 +66,10 @@
       <div class="col-lg-6">
     <div class="p-4 bg-light rounded shadow-sm border product-details-card">
         <h4 class="text-success fw-bold">{{ product.price|floatformat:0 }}</h4>
+        
+        <p class="text-muted">
+          Posted on: {{ product.created_at|date:"F j, Y" }} at {{ product.created_at|time:"H:i" }}
+        </p>
 
         <div class="mt-3">
             <h6 class="fw-bold text-secondary">Product Description</h6>
