Updated settings for Railway

--- a/templates/about.html
+++ b/templates/about.html
@@ -195,7 +195,7 @@ h1, h2, h3, h5 {
 <section class="team py-5">
     <div class="container">
         <h2 class="fw-bold text-center mb-5">Meet the Team</h2>
-        <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
+        <div class="row row-cols-1 row-cols-md-6 g-4 text-center">
             <div class="col">
                 <img src="{% static 'images/emmy.jpg' %}" class="rounded-circle mb-3" width="150" height="150" alt="Emmy">
                 <h5 class="fw-bold">Emmy</h5>
@@ -204,12 +204,7 @@ h1, h2, h3, h5 {
             <div class="col">
                 <img src="{% static 'images/victory.jpg' %}" class="rounded-circle mb-3" width="150" height="150" alt="Victory">
                 <h5 class="fw-bold">Victory</h5>
-                <p class="text-muted">Graphics</p>
-            </div>
-            <div class="col">
-                <img src="{% static 'images/daniel.jpg' %}" class="rounded-circle mb-3" width="150" height="150" alt="Daniel">
-                <h5 class="fw-bold">Daniel</h5>
-                <p class="text-muted">Community & Support</p>
+                <p class="text-muted">Graphics, Tester etc</p>
             </div>
         </div>
     </div>
